# manifestation-algorithm

./: .dependency-cruiser.js  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  check_coverage.cjs  check_coverage.js  check_sum.js  cliff.toml  development.md  e2e-output.txt  eslint.config.js  index.html  latest.json  manifestation_algorithm.html  package-lock.json  package.json  playwright.config.ts  setup.md  stryker.config.json  test-output.txt  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  ci.yml  pages.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
_bmad-output/: CODE-QUALITY-RESEARCH-REPORT.md  CODE-REVIEW-REPORT.md  DUAL-AGENT-REVIEW-REPORT.md  MULTI-AGENT-REPO-REVIEW-2026-02-21.md  MULTI-AGENT-REPO-REVIEW-2026-02-22.md
_bmad-output/planning-artifacts/: ADR-001-Desktop-Framework-Tauri.md  ADR-002-SQLite-Encrypted-Storage.md  ADR-003-IPFS-Decentralized-Network.md  ADR-004-Vue3-Frontend.md  ADR-005-Zero-PII-Privacy-Design.md  ADR-006-GitHub-Releases-Distribution.md  ADR-006-Scoring-Default-Rating.md  ADR-006-Scoring-Default-Unanswered-Questions.md  ADR-006-scoring-unanswered-default.md  ADR-007-Chart.js-Visualization.md  ADR-008-Database-Schema-Expansion.md  ADR-Index.md  Implementation-Epics.md  PRD-Master-Index.md  PRD-Phase-1-Core-Application.md  PRD-Phase-2-Statistics-Dashboard.md  PRD-Phase-3-IPFS-Integration.md  PRD-Phase-4-Distribution-Polish.md  Test-Plan-Master-Index.md  Test-Plan-Phase-1.md  Test-Plan-Phase-2.md  Test-Plan-Phase-3.md  Test-Plan-Phase-4.md  manifestation-algorithm-technical-research.md
_bmad-output/stories/: dev-story-archon-implementation.md  story-category-recommendations.md  story-first-run-onboarding.md
docs/: architecture.md  database.md  network-architecture.md  product-brief.md  scoring-formula.md  tauri-commands.md  updater-setup.md  user-personas.md
e2e/fixtures/: base.ts  tauri-mock.ts
e2e/pages/: app.page.ts  dashboard.page.ts  home.page.ts  questionnaire.page.ts  (+1 more)
scripts/: bump-version.js  check-naming.cjs  sync-version.js
src/: App.spec.ts  App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: identity.rs  lib.rs  main.rs  network.rs
src-tauri/src/network/: mod.rs  node.rs  types.rs  utils.rs
tests/: setup.ts
website/: Gemfile  _config.yml  index.html  index.md  latest.json
(+357 files in other folders)
