[package]
name = "manifestation-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tyshawn Despenza"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manifestation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = [
    "gossipsub", 
    "kad", 
    "mdns", 
    "noise", 
    "macros", 
    "tcp", 
    "tokio", 
    "yamux", 
    "identify",
    "ping"
] }
log = "0.4"
env_logger = "0.11"
lru = "0.16.3"
sha2 = "0.10.9"
cid = "0.10"
multihash = { version = "0.18", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

