[package]
name = "manifestation-app"
version = "0.11.0"
description = "A Tauri App"
authors = ["Tyshawn Despenza"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manifestation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.56", features = [
    "gossipsub", 
    "kad", 
    "mdns", 
    "noise", 
    "macros", 
    "tcp", 
    "tokio", 
    "yamux", 
    "identify",
    "ping"
] }
log = "0.4"
env_logger = "0.11"
lru = "0.16.3"
sha2 = "0.10.9"
cid = "0.11"
multihash = "0.19"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

